# rfp_copilot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  openapi.yaml
.claude/: settings.json
.github/: pull_request_template.md
backend/: Dockerfile.dev  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: answers.py  assessments.py  compliance.py  documents.py  exports.py  projects.py  questions.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  answer.py  assessment.py  compliance.py  document.py  project.py  question.py
backend/app/schemas/: __init__.py  answer.py  assessment.py  common.py  compliance.py  document.py  export.py  project.py  question.py
backend/app/services/: answer_generation.py  compliance_check.py  document_parser.py  export_docx.py  export_pdf.py  global_knowledge.py  knowledge_ingestion.py  question_extraction.py  retrieval.py  rfp_assessment.py
backend/app/storage/: memory_store.py
backend/evals/: README.md  evaluate_sample_pipeline.py
docs/: AGENT_GUIDE.md  API_CONTRACTS.md  ARCHITECTURE.md  DECISIONS.md  DEMO_SCRIPT.md  OWNERSHIP.md  PIPELINE_EVALS.md  PROJECT_VISION.md  PROMPTS.md  RAG_INTERFACE.md  TASK_BREAKDOWN.md
frontend/: Dockerfile.dev  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  NewProjectModal.tsx  styles.css  types.ts
sample_data/: README.md
sample_data/knowledge_base/: accessibility_and_ux_standards.md  assessment_bid_decision_playbook.md  assessment_client_information_requests.md  (+12 more)
(+11 files in other folders)
