[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rfp-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for RFP Copilot hackathon MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.2",
    "pymupdf>=1.24.0",
    "openai>=1.40.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

